goianinha.sintatico.output
State 121 conflicts: 1 shift/reduce


Grammar

    0 $accept: Programa $end

    1 Programa: DeclFuncVar DeclProg

    2 DeclFuncVar: Tipo ID DeclVar PONTO_VIRGULA DeclFuncVar
    3            | Tipo ID DeclFunc DeclFuncVar
    4            | ε

    5 DeclProg: PROGRAMA Bloco

    6 DeclVar: VIRGULA ID DeclVar
    7        | ε

    8 DeclFunc: ABRE_PARENTESES ListaParametros FECHA_PARENTESES Bloco

    9 ListaParametros: ε
   10                | ListaParametrosCont

   11 ListaParametrosCont: Tipo ID
   12                    | Tipo ID VIRGULA ListaParametrosCont

   13 Bloco: ABRE_CHAVES ListaDeclVar ListaComando FECHA_CHAVES
   14      | ABRE_CHAVES ListaDeclVar FECHA_CHAVES

   15 ListaDeclVar: ε
   16             | Tipo ID DeclVar PONTO_VIRGULA ListaDeclVar

   17 Tipo: INTEIRO
   18     | CARACTERE

   19 ListaComando: Comando
   20             | Comando ListaComando

   21 Comando: PONTO_VIRGULA
   22        | Expr PONTO_VIRGULA
   23        | RETORNE Expr PONTO_VIRGULA
   24        | LEIA LValueExpr PONTO_VIRGULA
   25        | ESCREVA Expr PONTO_VIRGULA
   26        | ESCREVA CADEIA_CARACTERES PONTO_VIRGULA
   27        | NOVA_LINHA PONTO_VIRGULA
   28        | SE ABRE_PARENTESES Expr FECHA_PARENTESES ENTAO Comando
   29        | SE ABRE_PARENTESES Expr FECHA_PARENTESES ENTAO Comando SENAO Comando
   30        | ENQUANTO ABRE_PARENTESES Expr FECHA_PARENTESES EXECUTE Comando
   31        | Bloco

   32 Expr: OrExpr
   33     | LValueExpr ATRIBUICAO Expr

   34 OrExpr: OrExpr OU AndExpr
   35       | AndExpr

   36 AndExpr: AndExpr E EqExpr
   37        | EqExpr

   38 EqExpr: EqExpr IGUAL DesigExpr
   39       | EqExpr DIFERENTE DesigExpr
   40       | DesigExpr

   41 DesigExpr: DesigExpr MENOR AddExpr
   42          | DesigExpr MAIOR AddExpr
   43          | DesigExpr MAIOR_IGUAL AddExpr
   44          | DesigExpr MENOR_IGUAL AddExpr
   45          | AddExpr

   46 AddExpr: AddExpr ADICAO MulExpr
   47        | AddExpr SUBTRACAO MulExpr
   48        | MulExpr

   49 MulExpr: MulExpr MULTIPLICACAO UnExpr
   50        | MulExpr DIVISAO UnExpr
   51        | UnExpr

   52 UnExpr: SUBTRACAO PrimExpr
   53       | NEGACAO PrimExpr
   54       | PrimExpr

   55 LValueExpr: ID

   56 PrimExpr: ID ABRE_PARENTESES ListExpr FECHA_PARENTESES
   57         | ID ABRE_PARENTESES FECHA_PARENTESES
   58         | ID
   59         | CAR_CONST
   60         | INT_CONST
   61         | ABRE_PARENTESES Expr FECHA_PARENTESES

   62 ListExpr: Expr
   63         | ListExpr VIRGULA Expr


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAMA (258) 5
    CARACTERE (259) 18
    INTEIRO (260) 17
    RETORNE (261) 23
    LEIA (262) 24
    ESCREVA (263) 25 26
    NOVA_LINHA (264) 27
    SE (265) 28 29
    ENTAO (266) 28 29
    SENAO (267) 29
    ENQUANTO (268) 30
    EXECUTE (269) 30
    OU (270) 34
    E (271) 36
    NEGACAO (272) 53
    IGUAL (273) 38
    DIFERENTE (274) 39
    MENOR (275) 41
    MENOR_IGUAL (276) 44
    MAIOR (277) 42
    MAIOR_IGUAL (278) 43
    ATRIBUICAO (279) 33
    ADICAO (280) 46
    SUBTRACAO (281) 47 52
    MULTIPLICACAO (282) 49
    DIVISAO (283) 50
    ABRE_PARENTESES (284) 8 28 29 30 56 57 61
    FECHA_PARENTESES (285) 8 28 29 30 56 57 61
    ABRE_CHAVES (286) 13 14
    FECHA_CHAVES (287) 13 14
    VIRGULA (288) 6 12 63
    PONTO_VIRGULA (289) 2 16 21 22 23 24 25 26 27
    ID <strValue> (290) 2 3 6 11 12 16 55 56 57 58
    INT_CONST <intValue> (291) 60
    CAR_CONST <intValue> (292) 59
    CADEIA_CARACTERES <strValue> (293) 26


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    Programa (40)
        on left: 1
        on right: 0
    DeclFuncVar (41)
        on left: 2 3 4
        on right: 1 2 3
    DeclProg (42)
        on left: 5
        on right: 1
    DeclVar (43)
        on left: 6 7
        on right: 2 6 16
    DeclFunc (44)
        on left: 8
        on right: 3
    ListaParametros (45)
        on left: 9 10
        on right: 8
    ListaParametrosCont (46)
        on left: 11 12
        on right: 10 12
    Bloco (47)
        on left: 13 14
        on right: 5 8 31
    ListaDeclVar (48)
        on left: 15 16
        on right: 13 14 16
    Tipo (49)
        on left: 17 18
        on right: 2 3 11 12 16
    ListaComando (50)
        on left: 19 20
        on right: 13 20
    Comando (51)
        on left: 21 22 23 24 25 26 27 28 29 30 31
        on right: 19 20 28 29 30
    Expr (52)
        on left: 32 33
        on right: 22 23 25 28 29 30 33 61 62 63
    OrExpr (53)
        on left: 34 35
        on right: 32 34
    AndExpr (54)
        on left: 36 37
        on right: 34 35 36
    EqExpr (55)
        on left: 38 39 40
        on right: 36 37 38 39
    DesigExpr (56)
        on left: 41 42 43 44 45
        on right: 38 39 40 41 42 43 44
    AddExpr (57)
        on left: 46 47 48
        on right: 41 42 43 44 45 46 47
    MulExpr (58)
        on left: 49 50 51
        on right: 46 47 48 49 50
    UnExpr (59)
        on left: 52 53 54
        on right: 49 50 51
    LValueExpr (60)
        on left: 55
        on right: 24 33
    PrimExpr (61)
        on left: 56 57 58 59 60 61
        on right: 52 53 54
    ListExpr (62)
        on left: 62 63
        on right: 56 63


State 0

    0 $accept: • Programa $end

    CARACTERE  shift, and go to state 1
    INTEIRO    shift, and go to state 2

    $default  reduce using rule 4 (DeclFuncVar)

    Programa     go to state 3
    DeclFuncVar  go to state 4
    Tipo         go to state 5


State 1

   18 Tipo: CARACTERE •

    $default  reduce using rule 18 (Tipo)


State 2

   17 Tipo: INTEIRO •

    $default  reduce using rule 17 (Tipo)


State 3

    0 $accept: Programa • $end

    $end  shift, and go to state 6


State 4

    1 Programa: DeclFuncVar • DeclProg

    PROGRAMA  shift, and go to state 7

    DeclProg  go to state 8


State 5

    2 DeclFuncVar: Tipo • ID DeclVar PONTO_VIRGULA DeclFuncVar
    3            | Tipo • ID DeclFunc DeclFuncVar

    ID  shift, and go to state 9


State 6

    0 $accept: Programa $end •

    $default  accept


State 7

    5 DeclProg: PROGRAMA • Bloco

    ABRE_CHAVES  shift, and go to state 10

    Bloco  go to state 11


State 8

    1 Programa: DeclFuncVar DeclProg •

    $default  reduce using rule 1 (Programa)


State 9

    2 DeclFuncVar: Tipo ID • DeclVar PONTO_VIRGULA DeclFuncVar
    3            | Tipo ID • DeclFunc DeclFuncVar

    ABRE_PARENTESES  shift, and go to state 12
    VIRGULA          shift, and go to state 13

    $default  reduce using rule 7 (DeclVar)

    DeclVar   go to state 14
    DeclFunc  go to state 15


State 10

   13 Bloco: ABRE_CHAVES • ListaDeclVar ListaComando FECHA_CHAVES
   14      | ABRE_CHAVES • ListaDeclVar FECHA_CHAVES

    CARACTERE  shift, and go to state 1
    INTEIRO    shift, and go to state 2

    $default  reduce using rule 15 (ListaDeclVar)

    ListaDeclVar  go to state 16
    Tipo          go to state 17


State 11

    5 DeclProg: PROGRAMA Bloco •

    $default  reduce using rule 5 (DeclProg)


State 12

    8 DeclFunc: ABRE_PARENTESES • ListaParametros FECHA_PARENTESES Bloco

    CARACTERE  shift, and go to state 1
    INTEIRO    shift, and go to state 2

    $default  reduce using rule 9 (ListaParametros)

    ListaParametros      go to state 18
    ListaParametrosCont  go to state 19
    Tipo                 go to state 20


State 13

    6 DeclVar: VIRGULA • ID DeclVar

    ID  shift, and go to state 21


State 14

    2 DeclFuncVar: Tipo ID DeclVar • PONTO_VIRGULA DeclFuncVar

    PONTO_VIRGULA  shift, and go to state 22


State 15

    3 DeclFuncVar: Tipo ID DeclFunc • DeclFuncVar

    CARACTERE  shift, and go to state 1
    INTEIRO    shift, and go to state 2

    $default  reduce using rule 4 (DeclFuncVar)

    DeclFuncVar  go to state 23
    Tipo         go to state 5


State 16

   13 Bloco: ABRE_CHAVES ListaDeclVar • ListaComando FECHA_CHAVES
   14      | ABRE_CHAVES ListaDeclVar • FECHA_CHAVES

    RETORNE          shift, and go to state 24
    LEIA             shift, and go to state 25
    ESCREVA          shift, and go to state 26
    NOVA_LINHA       shift, and go to state 27
    SE               shift, and go to state 28
    ENQUANTO         shift, and go to state 29
    NEGACAO          shift, and go to state 30
    SUBTRACAO        shift, and go to state 31
    ABRE_PARENTESES  shift, and go to state 32
    ABRE_CHAVES      shift, and go to state 10
    FECHA_CHAVES     shift, and go to state 33
    PONTO_VIRGULA    shift, and go to state 34
    ID               shift, and go to state 35
    INT_CONST        shift, and go to state 36
    CAR_CONST        shift, and go to state 37

    Bloco         go to state 38
    ListaComando  go to state 39
    Comando       go to state 40
    Expr          go to state 41
    OrExpr        go to state 42
    AndExpr       go to state 43
    EqExpr        go to state 44
    DesigExpr     go to state 45
    AddExpr       go to state 46
    MulExpr       go to state 47
    UnExpr        go to state 48
    LValueExpr    go to state 49
    PrimExpr      go to state 50


State 17

   16 ListaDeclVar: Tipo • ID DeclVar PONTO_VIRGULA ListaDeclVar

    ID  shift, and go to state 51


State 18

    8 DeclFunc: ABRE_PARENTESES ListaParametros • FECHA_PARENTESES Bloco

    FECHA_PARENTESES  shift, and go to state 52


State 19

   10 ListaParametros: ListaParametrosCont •

    $default  reduce using rule 10 (ListaParametros)


State 20

   11 ListaParametrosCont: Tipo • ID
   12                    | Tipo • ID VIRGULA ListaParametrosCont

    ID  shift, and go to state 53


State 21

    6 DeclVar: VIRGULA ID • DeclVar

    VIRGULA  shift, and go to state 13

    $default  reduce using rule 7 (DeclVar)

    DeclVar  go to state 54


State 22

    2 DeclFuncVar: Tipo ID DeclVar PONTO_VIRGULA • DeclFuncVar

    CARACTERE  shift, and go to state 1
    INTEIRO    shift, and go to state 2

    $default  reduce using rule 4 (DeclFuncVar)

    DeclFuncVar  go to state 55
    Tipo         go to state 5


State 23

    3 DeclFuncVar: Tipo ID DeclFunc DeclFuncVar •

    $default  reduce using rule 3 (DeclFuncVar)


State 24

   23 Comando: RETORNE • Expr PONTO_VIRGULA

    NEGACAO          shift, and go to state 30
    SUBTRACAO        shift, and go to state 31
    ABRE_PARENTESES  shift, and go to state 32
    ID               shift, and go to state 35
    INT_CONST        shift, and go to state 36
    CAR_CONST        shift, and go to state 37

    Expr        go to state 56
    OrExpr      go to state 42
    AndExpr     go to state 43
    EqExpr      go to state 44
    DesigExpr   go to state 45
    AddExpr     go to state 46
    MulExpr     go to state 47
    UnExpr      go to state 48
    LValueExpr  go to state 49
    PrimExpr    go to state 50


State 25

   24 Comando: LEIA • LValueExpr PONTO_VIRGULA

    ID  shift, and go to state 57

    LValueExpr  go to state 58


State 26

   25 Comando: ESCREVA • Expr PONTO_VIRGULA
   26        | ESCREVA • CADEIA_CARACTERES PONTO_VIRGULA

    NEGACAO            shift, and go to state 30
    SUBTRACAO          shift, and go to state 31
    ABRE_PARENTESES    shift, and go to state 32
    ID                 shift, and go to state 35
    INT_CONST          shift, and go to state 36
    CAR_CONST          shift, and go to state 37
    CADEIA_CARACTERES  shift, and go to state 59

    Expr        go to state 60
    OrExpr      go to state 42
    AndExpr     go to state 43
    EqExpr      go to state 44
    DesigExpr   go to state 45
    AddExpr     go to state 46
    MulExpr     go to state 47
    UnExpr      go to state 48
    LValueExpr  go to state 49
    PrimExpr    go to state 50


State 27

   27 Comando: NOVA_LINHA • PONTO_VIRGULA

    PONTO_VIRGULA  shift, and go to state 61


State 28

   28 Comando: SE • ABRE_PARENTESES Expr FECHA_PARENTESES ENTAO Comando
   29        | SE • ABRE_PARENTESES Expr FECHA_PARENTESES ENTAO Comando SENAO Comando

    ABRE_PARENTESES  shift, and go to state 62


State 29

   30 Comando: ENQUANTO • ABRE_PARENTESES Expr FECHA_PARENTESES EXECUTE Comando

    ABRE_PARENTESES  shift, and go to state 63


State 30

   53 UnExpr: NEGACAO • PrimExpr

    ABRE_PARENTESES  shift, and go to state 32
    ID               shift, and go to state 64
    INT_CONST        shift, and go to state 36
    CAR_CONST        shift, and go to state 37

    PrimExpr  go to state 65


State 31

   52 UnExpr: SUBTRACAO • PrimExpr

    ABRE_PARENTESES  shift, and go to state 32
    ID               shift, and go to state 64
    INT_CONST        shift, and go to state 36
    CAR_CONST        shift, and go to state 37

    PrimExpr  go to state 66


State 32

   61 PrimExpr: ABRE_PARENTESES • Expr FECHA_PARENTESES

    NEGACAO          shift, and go to state 30
    SUBTRACAO        shift, and go to state 31
    ABRE_PARENTESES  shift, and go to state 32
    ID               shift, and go to state 35
    INT_CONST        shift, and go to state 36
    CAR_CONST        shift, and go to state 37

    Expr        go to state 67
    OrExpr      go to state 42
    AndExpr     go to state 43
    EqExpr      go to state 44
    DesigExpr   go to state 45
    AddExpr     go to state 46
    MulExpr     go to state 47
    UnExpr      go to state 48
    LValueExpr  go to state 49
    PrimExpr    go to state 50


State 33

   14 Bloco: ABRE_CHAVES ListaDeclVar FECHA_CHAVES •

    $default  reduce using rule 14 (Bloco)


State 34

   21 Comando: PONTO_VIRGULA •

    $default  reduce using rule 21 (Comando)


State 35

   55 LValueExpr: ID •
   56 PrimExpr: ID • ABRE_PARENTESES ListExpr FECHA_PARENTESES
   57         | ID • ABRE_PARENTESES FECHA_PARENTESES
   58         | ID •

    ABRE_PARENTESES  shift, and go to state 68

    ATRIBUICAO  reduce using rule 55 (LValueExpr)
    $default    reduce using rule 58 (PrimExpr)


State 36

   60 PrimExpr: INT_CONST •

    $default  reduce using rule 60 (PrimExpr)


State 37

   59 PrimExpr: CAR_CONST •

    $default  reduce using rule 59 (PrimExpr)


State 38

   31 Comando: Bloco •

    $default  reduce using rule 31 (Comando)


State 39

   13 Bloco: ABRE_CHAVES ListaDeclVar ListaComando • FECHA_CHAVES

    FECHA_CHAVES  shift, and go to state 69


State 40

   19 ListaComando: Comando •
   20             | Comando • ListaComando

    RETORNE          shift, and go to state 24
    LEIA             shift, and go to state 25
    ESCREVA          shift, and go to state 26
    NOVA_LINHA       shift, and go to state 27
    SE               shift, and go to state 28
    ENQUANTO         shift, and go to state 29
    NEGACAO          shift, and go to state 30
    SUBTRACAO        shift, and go to state 31
    ABRE_PARENTESES  shift, and go to state 32
    ABRE_CHAVES      shift, and go to state 10
    PONTO_VIRGULA    shift, and go to state 34
    ID               shift, and go to state 35
    INT_CONST        shift, and go to state 36
    CAR_CONST        shift, and go to state 37

    $default  reduce using rule 19 (ListaComando)

    Bloco         go to state 38
    ListaComando  go to state 70
    Comando       go to state 40
    Expr          go to state 41
    OrExpr        go to state 42
    AndExpr       go to state 43
    EqExpr        go to state 44
    DesigExpr     go to state 45
    AddExpr       go to state 46
    MulExpr       go to state 47
    UnExpr        go to state 48
    LValueExpr    go to state 49
    PrimExpr      go to state 50


State 41

   22 Comando: Expr • PONTO_VIRGULA

    PONTO_VIRGULA  shift, and go to state 71


State 42

   32 Expr: OrExpr •
   34 OrExpr: OrExpr • OU AndExpr

    OU  shift, and go to state 72

    $default  reduce using rule 32 (Expr)


State 43

   35 OrExpr: AndExpr •
   36 AndExpr: AndExpr • E EqExpr

    E  shift, and go to state 73

    $default  reduce using rule 35 (OrExpr)


State 44

   37 AndExpr: EqExpr •
   38 EqExpr: EqExpr • IGUAL DesigExpr
   39       | EqExpr • DIFERENTE DesigExpr

    IGUAL      shift, and go to state 74
    DIFERENTE  shift, and go to state 75

    $default  reduce using rule 37 (AndExpr)


State 45

   40 EqExpr: DesigExpr •
   41 DesigExpr: DesigExpr • MENOR AddExpr
   42          | DesigExpr • MAIOR AddExpr
   43          | DesigExpr • MAIOR_IGUAL AddExpr
   44          | DesigExpr • MENOR_IGUAL AddExpr

    MENOR        shift, and go to state 76
    MENOR_IGUAL  shift, and go to state 77
    MAIOR        shift, and go to state 78
    MAIOR_IGUAL  shift, and go to state 79

    $default  reduce using rule 40 (EqExpr)


State 46

   45 DesigExpr: AddExpr •
   46 AddExpr: AddExpr • ADICAO MulExpr
   47        | AddExpr • SUBTRACAO MulExpr

    ADICAO     shift, and go to state 80
    SUBTRACAO  shift, and go to state 81

    $default  reduce using rule 45 (DesigExpr)


State 47

   48 AddExpr: MulExpr •
   49 MulExpr: MulExpr • MULTIPLICACAO UnExpr
   50        | MulExpr • DIVISAO UnExpr

    MULTIPLICACAO  shift, and go to state 82
    DIVISAO        shift, and go to state 83

    $default  reduce using rule 48 (AddExpr)


State 48

   51 MulExpr: UnExpr •

    $default  reduce using rule 51 (MulExpr)


State 49

   33 Expr: LValueExpr • ATRIBUICAO Expr

    ATRIBUICAO  shift, and go to state 84


State 50

   54 UnExpr: PrimExpr •

    $default  reduce using rule 54 (UnExpr)


State 51

   16 ListaDeclVar: Tipo ID • DeclVar PONTO_VIRGULA ListaDeclVar

    VIRGULA  shift, and go to state 13

    $default  reduce using rule 7 (DeclVar)

    DeclVar  go to state 85


State 52

    8 DeclFunc: ABRE_PARENTESES ListaParametros FECHA_PARENTESES • Bloco

    ABRE_CHAVES  shift, and go to state 10

    Bloco  go to state 86


State 53

   11 ListaParametrosCont: Tipo ID •
   12                    | Tipo ID • VIRGULA ListaParametrosCont

    VIRGULA  shift, and go to state 87

    $default  reduce using rule 11 (ListaParametrosCont)


State 54

    6 DeclVar: VIRGULA ID DeclVar •

    $default  reduce using rule 6 (DeclVar)


State 55

    2 DeclFuncVar: Tipo ID DeclVar PONTO_VIRGULA DeclFuncVar •

    $default  reduce using rule 2 (DeclFuncVar)


State 56

   23 Comando: RETORNE Expr • PONTO_VIRGULA

    PONTO_VIRGULA  shift, and go to state 88


State 57

   55 LValueExpr: ID •

    $default  reduce using rule 55 (LValueExpr)


State 58

   24 Comando: LEIA LValueExpr • PONTO_VIRGULA

    PONTO_VIRGULA  shift, and go to state 89


State 59

   26 Comando: ESCREVA CADEIA_CARACTERES • PONTO_VIRGULA

    PONTO_VIRGULA  shift, and go to state 90


State 60

   25 Comando: ESCREVA Expr • PONTO_VIRGULA

    PONTO_VIRGULA  shift, and go to state 91


State 61

   27 Comando: NOVA_LINHA PONTO_VIRGULA •

    $default  reduce using rule 27 (Comando)


State 62

   28 Comando: SE ABRE_PARENTESES • Expr FECHA_PARENTESES ENTAO Comando
   29        | SE ABRE_PARENTESES • Expr FECHA_PARENTESES ENTAO Comando SENAO Comando

    NEGACAO          shift, and go to state 30
    SUBTRACAO        shift, and go to state 31
    ABRE_PARENTESES  shift, and go to state 32
    ID               shift, and go to state 35
    INT_CONST        shift, and go to state 36
    CAR_CONST        shift, and go to state 37

    Expr        go to state 92
    OrExpr      go to state 42
    AndExpr     go to state 43
    EqExpr      go to state 44
    DesigExpr   go to state 45
    AddExpr     go to state 46
    MulExpr     go to state 47
    UnExpr      go to state 48
    LValueExpr  go to state 49
    PrimExpr    go to state 50


State 63

   30 Comando: ENQUANTO ABRE_PARENTESES • Expr FECHA_PARENTESES EXECUTE Comando

    NEGACAO          shift, and go to state 30
    SUBTRACAO        shift, and go to state 31
    ABRE_PARENTESES  shift, and go to state 32
    ID               shift, and go to state 35
    INT_CONST        shift, and go to state 36
    CAR_CONST        shift, and go to state 37

    Expr        go to state 93
    OrExpr      go to state 42
    AndExpr     go to state 43
    EqExpr      go to state 44
    DesigExpr   go to state 45
    AddExpr     go to state 46
    MulExpr     go to state 47
    UnExpr      go to state 48
    LValueExpr  go to state 49
    PrimExpr    go to state 50


State 64

   56 PrimExpr: ID • ABRE_PARENTESES ListExpr FECHA_PARENTESES
   57         | ID • ABRE_PARENTESES FECHA_PARENTESES
   58         | ID •

    ABRE_PARENTESES  shift, and go to state 68

    $default  reduce using rule 58 (PrimExpr)


State 65

   53 UnExpr: NEGACAO PrimExpr •

    $default  reduce using rule 53 (UnExpr)


State 66

   52 UnExpr: SUBTRACAO PrimExpr •

    $default  reduce using rule 52 (UnExpr)


State 67

   61 PrimExpr: ABRE_PARENTESES Expr • FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 94


State 68

   56 PrimExpr: ID ABRE_PARENTESES • ListExpr FECHA_PARENTESES
   57         | ID ABRE_PARENTESES • FECHA_PARENTESES

    NEGACAO           shift, and go to state 30
    SUBTRACAO         shift, and go to state 31
    ABRE_PARENTESES   shift, and go to state 32
    FECHA_PARENTESES  shift, and go to state 95
    ID                shift, and go to state 35
    INT_CONST         shift, and go to state 36
    CAR_CONST         shift, and go to state 37

    Expr        go to state 96
    OrExpr      go to state 42
    AndExpr     go to state 43
    EqExpr      go to state 44
    DesigExpr   go to state 45
    AddExpr     go to state 46
    MulExpr     go to state 47
    UnExpr      go to state 48
    LValueExpr  go to state 49
    PrimExpr    go to state 50
    ListExpr    go to state 97


State 69

   13 Bloco: ABRE_CHAVES ListaDeclVar ListaComando FECHA_CHAVES •

    $default  reduce using rule 13 (Bloco)


State 70

   20 ListaComando: Comando ListaComando •

    $default  reduce using rule 20 (ListaComando)


State 71

   22 Comando: Expr PONTO_VIRGULA •

    $default  reduce using rule 22 (Comando)


State 72

   34 OrExpr: OrExpr OU • AndExpr

    NEGACAO          shift, and go to state 30
    SUBTRACAO        shift, and go to state 31
    ABRE_PARENTESES  shift, and go to state 32
    ID               shift, and go to state 64
    INT_CONST        shift, and go to state 36
    CAR_CONST        shift, and go to state 37

    AndExpr    go to state 98
    EqExpr     go to state 44
    DesigExpr  go to state 45
    AddExpr    go to state 46
    MulExpr    go to state 47
    UnExpr     go to state 48
    PrimExpr   go to state 50


State 73

   36 AndExpr: AndExpr E • EqExpr

    NEGACAO          shift, and go to state 30
    SUBTRACAO        shift, and go to state 31
    ABRE_PARENTESES  shift, and go to state 32
    ID               shift, and go to state 64
    INT_CONST        shift, and go to state 36
    CAR_CONST        shift, and go to state 37

    EqExpr     go to state 99
    DesigExpr  go to state 45
    AddExpr    go to state 46
    MulExpr    go to state 47
    UnExpr     go to state 48
    PrimExpr   go to state 50


State 74

   38 EqExpr: EqExpr IGUAL • DesigExpr

    NEGACAO          shift, and go to state 30
    SUBTRACAO        shift, and go to state 31
    ABRE_PARENTESES  shift, and go to state 32
    ID               shift, and go to state 64
    INT_CONST        shift, and go to state 36
    CAR_CONST        shift, and go to state 37

    DesigExpr  go to state 100
    AddExpr    go to state 46
    MulExpr    go to state 47
    UnExpr     go to state 48
    PrimExpr   go to state 50


State 75

   39 EqExpr: EqExpr DIFERENTE • DesigExpr

    NEGACAO          shift, and go to state 30
    SUBTRACAO        shift, and go to state 31
    ABRE_PARENTESES  shift, and go to state 32
    ID               shift, and go to state 64
    INT_CONST        shift, and go to state 36
    CAR_CONST        shift, and go to state 37

    DesigExpr  go to state 101
    AddExpr    go to state 46
    MulExpr    go to state 47
    UnExpr     go to state 48
    PrimExpr   go to state 50


State 76

   41 DesigExpr: DesigExpr MENOR • AddExpr

    NEGACAO          shift, and go to state 30
    SUBTRACAO        shift, and go to state 31
    ABRE_PARENTESES  shift, and go to state 32
    ID               shift, and go to state 64
    INT_CONST        shift, and go to state 36
    CAR_CONST        shift, and go to state 37

    AddExpr   go to state 102
    MulExpr   go to state 47
    UnExpr    go to state 48
    PrimExpr  go to state 50


State 77

   44 DesigExpr: DesigExpr MENOR_IGUAL • AddExpr

    NEGACAO          shift, and go to state 30
    SUBTRACAO        shift, and go to state 31
    ABRE_PARENTESES  shift, and go to state 32
    ID               shift, and go to state 64
    INT_CONST        shift, and go to state 36
    CAR_CONST        shift, and go to state 37

    AddExpr   go to state 103
    MulExpr   go to state 47
    UnExpr    go to state 48
    PrimExpr  go to state 50


State 78

   42 DesigExpr: DesigExpr MAIOR • AddExpr

    NEGACAO          shift, and go to state 30
    SUBTRACAO        shift, and go to state 31
    ABRE_PARENTESES  shift, and go to state 32
    ID               shift, and go to state 64
    INT_CONST        shift, and go to state 36
    CAR_CONST        shift, and go to state 37

    AddExpr   go to state 104
    MulExpr   go to state 47
    UnExpr    go to state 48
    PrimExpr  go to state 50


State 79

   43 DesigExpr: DesigExpr MAIOR_IGUAL • AddExpr

    NEGACAO          shift, and go to state 30
    SUBTRACAO        shift, and go to state 31
    ABRE_PARENTESES  shift, and go to state 32
    ID               shift, and go to state 64
    INT_CONST        shift, and go to state 36
    CAR_CONST        shift, and go to state 37

    AddExpr   go to state 105
    MulExpr   go to state 47
    UnExpr    go to state 48
    PrimExpr  go to state 50


State 80

   46 AddExpr: AddExpr ADICAO • MulExpr

    NEGACAO          shift, and go to state 30
    SUBTRACAO        shift, and go to state 31
    ABRE_PARENTESES  shift, and go to state 32
    ID               shift, and go to state 64
    INT_CONST        shift, and go to state 36
    CAR_CONST        shift, and go to state 37

    MulExpr   go to state 106
    UnExpr    go to state 48
    PrimExpr  go to state 50


State 81

   47 AddExpr: AddExpr SUBTRACAO • MulExpr

    NEGACAO          shift, and go to state 30
    SUBTRACAO        shift, and go to state 31
    ABRE_PARENTESES  shift, and go to state 32
    ID               shift, and go to state 64
    INT_CONST        shift, and go to state 36
    CAR_CONST        shift, and go to state 37

    MulExpr   go to state 107
    UnExpr    go to state 48
    PrimExpr  go to state 50


State 82

   49 MulExpr: MulExpr MULTIPLICACAO • UnExpr

    NEGACAO          shift, and go to state 30
    SUBTRACAO        shift, and go to state 31
    ABRE_PARENTESES  shift, and go to state 32
    ID               shift, and go to state 64
    INT_CONST        shift, and go to state 36
    CAR_CONST        shift, and go to state 37

    UnExpr    go to state 108
    PrimExpr  go to state 50


State 83

   50 MulExpr: MulExpr DIVISAO • UnExpr

    NEGACAO          shift, and go to state 30
    SUBTRACAO        shift, and go to state 31
    ABRE_PARENTESES  shift, and go to state 32
    ID               shift, and go to state 64
    INT_CONST        shift, and go to state 36
    CAR_CONST        shift, and go to state 37

    UnExpr    go to state 109
    PrimExpr  go to state 50


State 84
